grammar.txt
<program>         ::= <function_definition>
<function_definition> ::= "fn" <w>+ <identifier> <w>* "(" <w>* <parameter_list>? <w>* ")" <w>* ":" <w>* <type> <w>* "{" <w>* <statement_list> <w>* "}"
<parameter_list>  ::= <parameter> (<w>* "," <w>* <parameter>)*
<parameter>       ::= <identifier> <w>* ":" <w>* <type>
<type>            ::= ("int" | "char") <pointer_suffix>?
<pointer_suffix>  ::= "*" <pointer_suffix>? 
<statement_list>  ::= <statement>*
<statement>       ::= (<return_statement> | <assert_statement>) <w>* ";" <w>*
<return_statement> ::= "return" <w>+ <expression> 
<assert_statement> ::= "assert" <w>+ <expression>
<expression>      ::= <constant>
<constant>        ::= <number>
<number>          ::= <digit>+
<identifier>      ::= <letter> <identifier_rest>*
<identifier_rest> ::= <letter> | <digit> | "_"
<letter>          ::= "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z" | "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z"
<digit>           ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
<w>               ::= " " | "\t" | "\n"
